--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="box__mentor"><strong>mentor:</strong> Aleksander</div>
       <div class="box__team">Zespół:</div>
       <div class="box__memeber"><strong>1</strong></div>
-      <div class="box__memeber"><strong>2</strong></div>
+      <div class="box__memeber"><strong>Adrian</strong></div>
     </div>
   </body>
 </html>
